fix alert alignment

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@
   align-items: center;
 }
 
+.alert {
+  align-self: stretch;
+}
+
 .hidden {
   display: none;
 }
